samples/knative/mirroring/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: sample-app
  namespace: default
spec:
  template:
    metadata:
      name: sample-app-v1
    spec:
      containers:
        - image: gcr.io/knative-samples/knative-route-demo:blue 
          env:
            - name: T_VERSION
              value: "blue"
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: sample-app
  namespace: default
spec:
  template:
    metadata:
      name: sample-app-v2
    spec:
      containers:
        - image: gcr.io/knative-samples/knative-route-demo:green 
          env:
            - name: T_VERSION
              value: "green"
  traffic:
  - tag: prod
    revisionName: sample-app-v1
    percent: 100
  - tag: staging
    latestRevision: true
    percent: 0
