samples/knative/mirroring/domain-rule-one.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: header-match-cd
spec:
  gateways:
  - mesh
  hosts:
  - customdomain.com
  http:
  - route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
    mirror:
      host: istio-ingressgateway.istio-system.svc.cluster.local
